Refactor data layer to repository pattern and clean legacy storage modules

--- a/data/BKP/Default_Execution.yaml
+++ b/data/BKP/Default_Execution.yaml
@@ -2,9 +2,9 @@
 # This configuration triggers the complete assessment and remediation cycle.
 
 # Global Configuration Parameters
-language: "Default"            # Options: 'EN-US', 'PT-BR'
-sort_order: "ID"               # Options: 'ID' (Sequential 1-12) or 'Natural' (Priority order)
-navigation_mode: "Free"  # Options: 'Free' (Can navigate back) or 'Sequential' (No return)
+language: "default"            # Options: 'EN-US', 'PT-BR'
+sort_order: "id"               # Options: 'ID' (Sequential 1-12) or 'Natural' (Priority order)
+navigation_mode: "free"  # Options: 'Free' (Can navigate back) or 'Sequential' (No return)
 
 # Maturity Scale Reference
 # Defines scales accepted in the orchestration
@@ -21,18 +21,6 @@ execution_request:
       - id: "Q2"
         mandatory: "Yes"
         procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
 
   - domain: 2
     acronym: "DA"
@@ -42,20 +30,6 @@ execution_request:
         mandatory: "Yes"
         procedures: [1, 2, 3, 4, 5]
       - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
 
   - domain: 3
     acronym: "DMD"
@@ -66,227 +40,8 @@ execution_request:
         procedures: [1, 2, 3, 4, 5]
       - id: "Q2"
         mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 4
-    acronym: "DSO"
-    name: "Data Storage and Operations"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 5
-    acronym: "DS"
-    name: "Data Security"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 6
-    acronym: "DII"
-    name: "Data Integration and Interoperability"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 7
-    acronym: "DCM"
-    name: "Document and Content Management"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 8
-    acronym: "RMD"
-    name: "Reference and Master Data"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 9
-    acronym: "DWBI"
-    name: "Data Warehousing and Business Intelligence"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 10
-    acronym: "MD"
-    name: "Metadata"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 11
-    acronym: "DQ"
-    name: "Data Quality"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
-  - domain: 12
-    acronym: "AIML"
-    name: "AI and Machine Learning"
-    selected_questions:
-      - id: "Q1"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q2"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q3"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q4"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q5"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-      - id: "Q6"
-        mandatory: "Yes"
-        procedures: [1, 2, 3, 4, 5]
-
+ 
+ 
 # Final Orchestration Rules:
 # 1. 'navigation_mode' set to 'Sequential' prevents users from returning to previous questions.
 # 2. 'mandatory' set to 'Yes' requires a score from maturity_scale before proceeding.
