Enhance i18n integration and update flow logic

--- a/data/general/app_config.yaml
+++ b/data/general/app_config.yaml
@@ -2,7 +2,7 @@ app:
   title: "🛡️ DOMMx Technical Diagnostic"
   show_intro: true
   language_default: us
-  language_posible: [us,es,pt] 
+  language_posible: [us,es,pt,fr,it,de] 
 
 intro:
   heading: "Welcome to DOMMx Assessment"
