--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@ data/results/
 data/users/
 git_tkn.txt
 *.sqlite
-service_account.json
 /data/general/secret.key
 /data/BKP/
 data/projects/
 
 # Service accounts
-*.json
 !package.json
 !tsconfig.json
+service_account.json
+*.key
 
 # Env
 .env*
