--- a/data/general/flow.yaml
+++ b/data/general/flow.yaml
@@ -1,11 +1,12 @@
 framework:
   name: "DOMMx - Data Operating Model & Maturity"
-  version: "1.1"
+  version: "1.2"
   execution_logic: "ID-Ordered-Capability-Building"
   description: >
-    This file defines the sequential order of the domains of the DOMMx Model
-    according to the official structure. Execution follows the Domain ID, based in DAMA and others.
-    
+    This file defines the structurally ordered domains of the DOMMx Model.
+    Dependencies include reflexive and transitive structural prerequisites
+    to ensure maturity coherence validation across domains.
+
 Domain_flow:
 
   - sequence: 1
@@ -19,7 +20,7 @@ Domain_flow:
 
   - sequence: 2
     domain_id: 2
-    dependence: [2]
+    dependence: [1,2]
     acronym: "DA"
     name: "Data Architecture"
     files:
@@ -28,7 +29,7 @@ Domain_flow:
 
   - sequence: 3
     domain_id: 3
-    dependence: [3]
+    dependence: [1,2,3]
     acronym: "DMD"
     name: "Data Modelling and Design"
     files:
@@ -36,80 +37,80 @@ Domain_flow:
       action_catalog: "DMD_action_catalog.yaml"
 
   - sequence: 4
-    domain_id: 4
-    dependence: [4]
-    acronym: "DSO"
-    name: "Data Storage and Operations"
-    files:
-      decision_tree: "DSO_decision_tree.yaml"
-      action_catalog: "DSO_action_catalog.yaml"
-
-  - sequence: 5
-    domain_id: 5
-    dependence: [5]
-    acronym: "DS"
-    name: "Data Security"
-    files:
-      decision_tree: "DS_decision_tree.yaml"
-      action_catalog: "DS_action_catalog.yaml"
-
-  - sequence: 6
-    domain_id: 6
-    dependence: [6]
-    acronym: "DII"
-    name: "Data Integration and Interoperability"
-    files:
-      decision_tree: "DII_decision_tree.yaml"
-      action_catalog: "DII_action_catalog.yaml"
-
-  - sequence: 7
-    domain_id: 7
-    dependence: [7]
-    acronym: "DCM"
-    name: "Document and Content Management"
-    files:
-      decision_tree: "DCM_decision_tree.yaml"
-      action_catalog: "DCM_action_catalog.yaml"
-
-  - sequence: 8
-    domain_id: 8
-    dependence: [8]
-    acronym: "RMD"
-    name: "Reference and Master Data"
-    files:
-      decision_tree: "RMD_decision_tree.yaml"
-      action_catalog: "RMD_action_catalog.yaml"
-
-  - sequence: 9
-    domain_id: 9
-    dependence: [9]
-    acronym: "DWBI"
-    name: "Data Warehousing and Business Intelligence"
-    files:
-      decision_tree: "DWBI_decision_tree.yaml"
-      action_catalog: "DWBI_action_catalog.yaml"
-
-  - sequence: 10
     domain_id: 10
-    dependence: [10]
+    dependence: [1,2,10]
     acronym: "MD"
     name: "Metadata"
     files:
       decision_tree: "MD_decision_tree.yaml"
       action_catalog: "MD_action_catalog.yaml"
 
-  - sequence: 11
+  - sequence: 5
     domain_id: 11
-    dependence: [11]
+    dependence: [1,2,3,11]
     acronym: "DQ"
     name: "Data Quality"
     files:
       decision_tree: "DQ_decision_tree.yaml"
       action_catalog: "DQ_action_catalog.yaml"
 
+  - sequence: 6
+    domain_id: 8
+    dependence: [1,2,3,8,11]
+    acronym: "RMD"
+    name: "Reference and Master Data"
+    files:
+      decision_tree: "RMD_decision_tree.yaml"
+      action_catalog: "RMD_action_catalog.yaml"
+
+  - sequence: 7
+    domain_id: 6
+    dependence: [1,2,3,6,11]
+    acronym: "DII"
+    name: "Data Integration and Interoperability"
+    files:
+      decision_tree: "DII_decision_tree.yaml"
+      action_catalog: "DII_action_catalog.yaml"
+
+  - sequence: 8
+    domain_id: 4
+    dependence: [1,2,3,4,11]
+    acronym: "DSO"
+    name: "Data Storage and Operations"
+    files:
+      decision_tree: "DSO_decision_tree.yaml"
+      action_catalog: "DSO_action_catalog.yaml"
+
+  - sequence: 9
+    domain_id: 5
+    dependence: [1,2,5,10]
+    acronym: "DS"
+    name: "Data Security"
+    files:
+      decision_tree: "DS_decision_tree.yaml"
+      action_catalog: "DS_action_catalog.yaml"
+
+  - sequence: 10
+    domain_id: 7
+    dependence: [1,7]
+    acronym: "DCM"
+    name: "Document and Content Management"
+    files:
+      decision_tree: "DCM_decision_tree.yaml"
+      action_catalog: "DCM_action_catalog.yaml"
+
+  - sequence: 11
+    domain_id: 9
+    dependence: [1,2,3,6,9,11]
+    acronym: "DWBI"
+    name: "Data Warehousing and Business Intelligence"
+    files:
+      decision_tree: "DWBI_decision_tree.yaml"
+      action_catalog: "DWBI_action_catalog.yaml"
+
   - sequence: 12
     domain_id: 12
-    dependence: [12]
+    dependence: [1,2,3,10,11,12]
     acronym: "AIML"
     name: "AI and Machine Learning"
     files:
@@ -117,6 +118,6 @@ Domain_flow:
       action_catalog: "AIML_action_catalog.yaml"
 
 orchestration_rules:
-  - rule_1: "The assessment must be conducted in sequential order from 1 to 12."
-  - rule_2: "The Decision Tree result for each domain determines the immediate entry point into the corresponding Action Catalog."
-  - rule_3: "Names and acronyms must be preserved to ensure consistency with the official DOMMx documentation."
+  - rule_1: "The assessment must be conducted in sequential structural order."
+  - rule_2: "Maturity incoherence must be flagged when a domain exceeds any structural dependency by two or more levels."
+  - rule_3: "Names and acronyms must remain aligned with the official DOMMx documentation."
